EVA-182 Fix: Se corrige el error que no permitia la gestión de SGI por proceso.

--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -78,7 +78,7 @@
                                                                                             {% else %}
                                                                                                 {% include 'SGI/documentos/BotonesGestion/botonesGestionSGI.html' %}
                                                                                             {% endif %}
-                                                                                            {% if not grupo_documento.solo_proceso and proceso == colaborador_proceso and not perms.TalentoHumano.can_gestioncompletasgi %}
+                                                                                            {% if not grupo_documento.solo_proceso and proceso in colaborador_proceso and not perms.TalentoHumano.can_gestioncompletasgi %}
                                                                                                 {% include 'SGI/documentos/BotonesGestion/botonesGestionSGI.html' %}
                                                                                             {% endif %}
                                                                                         {% endif %}
